# cuRobby

./: .cproject  .project  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  consts.h  cuRobby  ga.cu  ga.h  kernels.cu  kernels.h  main.c  parameters.conf  prng.cu  prng.h  read_parameters.c  read_parameters.h  robby.cu  robby.h  test_device.cu  test_device.h  utils.cu  utils.h  world.cu  world.h
src/.deps/: cuRobby-main.Po
